--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,8 @@
 [user]
 	name = Alex Crocker
 	email = hello@crock.dev
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
